--- a/ExpenseManagerLite/Views/Expense/Index.cshtml
+++ b/ExpenseManagerLite/Views/Expense/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ExpenseManager.Models.ExpenseReport>
+﻿@model IEnumerable<ExpenseManagerLite.Models.ExpenseReport>
 
 @{
     ViewData["Title"] = "Personal Expense Manager";
